<resources>
    <string name="app_name">SimpleTest</string>
    <string name="alphabets">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="signup">SignUp</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
<!--    error log-->
    <string name="textlimit_error">Oops!! Word should be minimum 3 and maximum 25 </string>
    <string name="email_invalid_error">Oops!! Word should be minimum 3 and maximum 25 </string>
    <string name="phonelimit_error">Oops!! Please enter 10 difit phone number </string>
    <string name="text_empty">Oops!! Field should not be empty</string>
    <string name="something_went_wrong">Oops!! Something went wrong</string>
    <string name="network_error">Oops!! no internet connection please check </string>
    <string name="camera_and_storage_rationale">This app needs access to your camera and storage  so you can take and store pictures.</string>
    <string name="title_settings">Settings</string>
    <string name="okay">Okay</string>
    <string name="message">message</string>

</resources>