<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_30sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/getstart"
            style="@style/normaltext"
            android:layout_gravity="center"
            android:text="@string/signup"
            android:background="@android:color/transparent"
            android:textSize="@dimen/_16sdp" />
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_icon"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:src="@color/gray"

            app:civ_border_color="@color/appcolor"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/_10sdp"
            app:civ_border_width="@dimen/_1sdp"
            />



        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/name"
            style="@style/normalInputField"
            android:hint="@string/name"

            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/email"
            style="@style/emailField"
            android:hint="@string/email"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/phone"
            style="@style/phoneInputField"
            android:hint="@string/phone"

            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/submit"
            style="@style/backbutton"
            android:paddingVertical="@dimen/_5sdp"
            android:text="@string/submit" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>